[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.png" type="Texture" id=2]

[sub_resource type="Gradient" id=1]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 1, 1, 1, 0.501961, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]

flags = 4
gradient = SubResource( 1 )
width = 2048

[sub_resource type="Curve" id=3]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]

flags = 4
width = 2048
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = true
flag_rotate_y = false
flag_disable_z = true
spread = 0.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 25.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 90.0
angle_random = 0.0
scale = 1.0
scale_random = 0.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color", "Flags", "Gravity", "Initial Velocity", "Scale", "Spread", "Trail" ]

[sub_resource type="CircleShape2D" id=6]

custom_solver_bias = 0.0
radius = 1024.0

[node name="Player" type="KinematicBody2D" groups=[
"entity",
"player",
]]

input_pickable = false
collision_layer = 1
collision_mask = 1097
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]
move_speed = 200
strafe_speed = 150
primary_cooldown = 0.2

[node name="BodyCollision" type="CollisionPolygon2D" parent="." index="0"]

build_mode = 0
polygon = PoolVector2Array( -8, -6, 8, -6, 0, 10 )

[node name="Camera2D" type="Camera2D" parent="." index="1"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = true
_sections_unfolded = [ "Drag Margin", "Editor", "Limit", "Offset", "Smoothing" ]

[node name="Visuals" type="Node2D" parent="." index="2"]

editor/display_folded = true

[node name="Trail" type="Particles2D" parent="Visuals" index="0"]

rotation = -1.5708
emitting = true
amount = 4
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 5 )
texture = ExtResource( 2 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Transform" ]

[node name="Sprite" type="Sprite" parent="Visuals" index="1"]

rotation = -3.14159
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Timers" type="Node" parent="." index="3"]

editor/display_folded = true

[node name="Primary" type="Timer" parent="Timers" index="0"]

process_mode = 0
wait_time = 1.0
one_shot = false
autostart = true

[node name="HitBox" type="Area2D" parent="." index="4"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 2192
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitBox" index="0"]

build_mode = 0
polygon = PoolVector2Array( -8, -6, 8, -6, 0, 10 )

[node name="GravityWell" type="Area2D" parent="." index="5"]

input_pickable = true
space_override = 1
gravity_point = true
gravity_distance_scale = 0.01
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 4
collision_mask = 1096
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GravityWell" index="0"]

visible = false
shape = SubResource( 6 )

[connection signal="timeout" from="Timers/Primary" to="." method="cooldown_finished" binds= [ 0 ]]

[connection signal="area_entered" from="HitBox" to="." method="hitbox_hit_by_area"]

[connection signal="body_entered" from="HitBox" to="." method="hitbox_hit_by_body"]


